--- a/.gitattributes
+++ b/.gitattributes
@@ -8,4 +8,4 @@
 /.gitattributes             export-ignore
 /.gitignore                 export-ignore
 /.gitmodules                export-ignore
-/test/                      export-ignore
+/tests/                     export-ignore
